--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "elm make src/Main.elm --optimize --output=main.js",
+    "build-dev": "elm make src/Main.elm --debug --output=main.js",
     "start": "elm-go src/Main.elm --open -- --output=main.js --debug"
   },
   "author": "",
