--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "elm-ui-css-escape-plan",
+  "name": "pavlick-dot-dev",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "elm make src/Main.elm --debug --output=main.js",
+    "build": "elm make src/Main.elm --optimize --output=main.js",
     "start": "elm-go src/Main.elm --open -- --output=main.js --debug"
   },
   "author": "",
