--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "elm make src/Main.elm --optimize --output=main.js",
+    "build": "elm make src/Main.elm --debug --output=main.js",
     "start": "elm-go src/Main.elm -h --open -- --output=main.js --debug"
   },
   "author": "",
